--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.4.1",
     "i18n": "^0.8.3",
     "jquery": "^3.2.1",
+    "ng2-translate": "^5.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
