--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,6 @@ jobs:
 
     env:
       CI: true
-      working-directory: ./path/to/site-vitrine/prod
 
     steps:
     - uses: actions/checkout@v2
@@ -30,8 +29,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
-      working-directory:  ${{env.working-directory}}
-    - run: git remote add dev-vitrine path/to/site-vitrine/dev
-    - run: git fetch dev-vitrine
-    - run: git merge --allow-unrelated-histories dev-vitrine/master
-    - run: git remote remove dev-vitrine
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
