--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
+    - run: npm install -g @angular/cli
+    - run: npm install -g angular-cli-ghpages
+    - run: ng build --env=prod
+    - run: ngh -no-silent
