--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -11,12 +11,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Extract branch name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      run: echo "##[set-output name=branch;]$(echo branch/${GITHUB_REF#refs/heads/}/)"
       id: extract_branch
     - name: Angular Deploy gh-pages Actions
       uses: GabrielVidal1/angular-deploy-gh-pages-actions@deploy-folder
       with:
         github_access_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         deploy_branch: gh-pages
-        target_folder: ./branch/${{ steps.extract_branch.outputs.branch }}/
-        base_href: branch/${{ steps.extract_branch.outputs.branch }}/
+        target_folder: ./branch/test/
+        base_href: branch/test/
