--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         github_access_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         deploy_branch: gh-pages
-        target_folder: ./branch/test/
-        base_href: branch/test/
+        target_folder: ./test/
+        base_href: https://sigl.epita.fr/test/
